--- a/app/views/admin/new_users_menu.rhtml
+++ b/app/views/admin/new_users_menu.rhtml
@@ -1,5 +1,15 @@
 <form action="/users/create_account_by_admin" role="form" class="form-horizontal" method="POST">
+  <div class="form-group">
+    <label class="control-label col-lg-4">User Role</label>
 
+    <div class="col-lg-7">
+      <select class="form-control" name="user_role" required>
+        <option value="user">Non Admin</option>
+        <option value="admin">Admin</option>
+      </select>
+    </div>
+  </div>
+  
   <div class="form-group">
     <label class="control-label col-lg-4" for="first_name">First Name</label>
     <div class="col-lg-7">
@@ -57,5 +67,5 @@
     </div>
   </div>
 
-  
+
 </form>
