--- a/app/views/admin/view_users_menu.rhtml
+++ b/app/views/admin/view_users_menu.rhtml
@@ -45,7 +45,7 @@
         </div>
         <div class="col-xs-8 col-sm-9 col-md-10 col-lg-10">
           <strong><%= user.username %></strong><br>
-          <span class="text-muted">User level: Administrator</span>
+          <span class="text-muted">User level: <%= user.role.capitalize %></span>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 dropdown-user" data-for=".<%= user.username %>">
           <i class="glyphicon glyphicon-chevron-down text-muted"></i>
@@ -88,7 +88,7 @@
                     <tbody>
                       <tr>
                         <td>User level:</td>
-                        <td>&nbsp;</td>
+                        <td><%= user.role.capitalize %></td>
                       </tr>
                       <tr>
                         <td>Email:</td>
