--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -134,11 +134,11 @@
           </a>
 
           <ul class="dropdown-menu">
-            <li><a href="./">My Account</a></li>
+            <li><a href="/my_account">My Account</a></li>
             <li class="divider"></li>
             <li class="dropdown-header">My Panel</li>
-            <li><a href="#">Book Shelf</a></li>
-            <li><a href="#">Book Store</a></li>
+            <li><a href="/dashboard">Book Shelf</a></li>
+            <li><a href="/select_books_from_store">Book Store</a></li>
             <li><a tabindex="-1" href="#">Readers Digest</a></li>
             <li class="divider"></li>
             <li><a tabindex="-1" href="/logout">Logout</a></li>
@@ -155,8 +155,8 @@
       <li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-fw fa-dashboard"></i> Bookshelf<i class="fa fa-collapse"></i></a></li>
       <li>
         <ul class="dashboard-menu nav nav-list collapse">
-          <li><a href="index.html"><span class="fa fa-caret-right"></span> Add book</a></li>
-          <li ><a href="users.html"><span class="fa fa-caret-right"></span> Remove Book</a></li>
+          <li><a href="#"><span class="fa fa-caret-right"></span> Add book</a></li>
+          <li ><a href=#"><span class="fa fa-caret-right"></span> Remove Book</a></li>
         </ul>
       </li>
     </ul>
@@ -164,10 +164,10 @@
 
   <div class="content">
     <div class="header">
-      <h1 class="page-title">Dashboard</h1>
+      <h1 class="page-title"><%= @page_title %></h1>
       <ul class="breadcrumb">
         <li><a href="/dashboard">Home</a> </li>
-        <li class="active">Home</li>
+        <li class="active"><%= @page_title %></li>
       </ul>
       <div class="row pull-right" style="margin-top: -31px;">
         <div class="col-md-12">
@@ -218,9 +218,9 @@
           <div class="col-sm-3 col-md-3 pull-right">
             <div class="well well-small">
               <button class="btn btn-block"> <b>Menu</b> </button>
-              <button class="btn btn-primary btn-block" onclick=""> Bookstore</button>
-              <button class="btn btn-info btn-block" onclick=""> Recent Books </button>
-              <button class="btn btn-success btn-block" onclick=""> Extras </button>
+              <button onclick="goToBookStore();" class="btn btn-primary btn-block" onclick=""> Bookstore</button>
+              <button onclick="goToRecentBooks();" class="btn btn-info btn-block" onclick=""> Recent Books </button>
+              <button onclick="goToExtras();" class="btn btn-success btn-block" onclick=""> Extras </button>
             </div>
           </div>
         </div>
