--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -213,6 +213,18 @@
 
         <div class="row">
           <div class="col-sm-9 col-md-9">
+            <% if flash[:notice] %>
+              <div class="alert alert-success alert-dismissable">
+                <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
+                <%= flash[:notice] %>
+              </div><br />
+            <% end %>
+            <% if flash[:error] %>
+              <div class="alert alert-danger alert-dismissable">
+                <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
+                <%= flash[:error] %>
+              </div><br />
+            <% end %>
             <%= yield %>
           </div>
           <div class="col-sm-3 col-md-3 pull-right">
