--- a/app/views/students/dashboard.rhtml
+++ b/app/views/students/dashboard.rhtml
@@ -3,31 +3,40 @@
     max-height: 111px;
     max-width: 100px;
   }
+
+  .panel-body .btn:not(.btn-block) {
+    width: 147px;
+  }
 </style>
 <div class="panel panel-default">
   <p class="panel-heading"><b>MY BOOKS (<%= @my_books.count %>)</b></p>
   <div class="panel-body">
-    <ul class="list-group">
-      <% @my_books.each do |book| %>
-        <li class="list-group-item">
-          <div class="media">
-            <a href="#" class="pull-left">
-              <% cover_location = "#{book.book_id}_cover_#{book.cover_photo_file_name}" %>
-              <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
-            </a>
-            <div class="media-body">
-              <p class="text-sm pull-right muted">Uploaded on <%= book.created_at.to_date.strftime("%d-%b-%Y") %></p>
-              <p class="media-heading">
-                Book title: <a href="#"><%= book.title %></a><br />
-                Authors: <a href="#"><%= book.author %></a></p>
-              <p>Subscribed By: </p>
-              <button onclick="viewBook('<%= book.book_id %>')" class="btn btn-primary"><i class="fa fa-eye"></i> Browse Book</button>
-              <button onclick="removeBookConfirm('<%= book.book_id %>')" class="btn pull-right btn-danger"><i class="fa fa-eye"></i> Delete</button>
+    <% unless @my_books.blank? %>
+      <ul class="list-group">
+        <% @my_books.each do |book| %>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#" class="pull-left">
+                <% cover_location = "#{book.book_id}_cover_#{book.cover_photo_file_name}" %>
+                <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
+              </a>
+              <div class="media-body">
+                <p class="text-sm pull-right muted">Uploaded on <%= book.created_at.to_date.strftime("%d-%b-%Y") %></p>
+                <p class="media-heading">
+                  Book title: <a href="#"><%= book.title %></a><br />
+                  Authors: <a href="#"><%= book.author %></a></p>
+                <p>Subscribed By: </p>
+                <button onclick="viewBook('<%= book.book_id %>')" class="btn btn-primary"><i class="fa fa-eye"></i> Browse Book</button>
+                <button onclick="removeBookConfirm('<%= book.book_id %>')" class="btn pull-right btn-danger"><i class="fa fa-eye"></i> Delete</button>
+              </div>
             </div>
-          </div>
-        </li>
-      <% end %>
-    </ul>
+          </li>
+        <% end %>
+      </ul>
+    <% else %>
+      <p>Your Book shelf is currently empty. Click the button below to add books</p>
+      <button onclick="selectBook()"class="btn btn-success"><i class="fa fa-plus"></i> Add Books</button>
+    <% end %>
   </div>
 </div>
 
@@ -76,6 +85,10 @@
     form.appendChild(input);
 
     form.submit();
+  }
+
+  function selectBook(){
+    window.location = "/select_books_from_store";
   }
 
 </script>
