--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -7,12 +7,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'/>
+    <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'/>-->
     <link rel="stylesheet" type="text/css" href="/AircraftAdminFree/lib/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="/AircraftAdminFree/lib/font-awesome/css/font-awesome.css"/>
 
     <script src="/AircraftAdminFree/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
 
 
     <link rel="stylesheet" type="text/css" href="/AircraftAdminFree/stylesheets/theme.css"/>
@@ -281,7 +281,10 @@
     function goToExtras(){
       window.location = "/extras";
     }
-    
+
+    $("#viewBook").draggable({
+      handle: ".modal-header"
+    });
   </script>
 
 
