--- a/app/views/students/select_books_from_store.rhtml
+++ b/app/views/students/select_books_from_store.rhtml
@@ -7,92 +7,116 @@
 <div class="panel panel-default">
   <p class="panel-heading"><b>PRIMARY BOOKS</b></p>
   <div class="panel-body">
-    <ul class="list-group">
-      <% @primary_books_category.each do |category| %>
-        <li class="list-group-item">
-          <div class="media">
-            <a href="#" class="pull-left">
-              <% cover_location = "#{category.book.book_id}_cover_#{category.book.cover_photo_file_name}"
+    <% unless @primary_books_category.blank? %>
+      <ul class="list-group">
+        <% @primary_books_category.each do |category| %>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#" class="pull-left">
+                <% cover_location = "#{category.book.book_id}_cover_#{category.book.cover_photo_file_name}"
 
-            %>
-              <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
-            </a>
-            <div class="media-body">
-              <p class="text-sm pull-right muted">Uploaded on <%= category.book.created_at.to_date.strftime("%d-%b-%Y") %></p>
-              <p class="media-heading">
-                Book title: <a href="#"><%= category.book.title %></a><br />
-                Authors: <a href="#"><%= category.book.author %></a></p>
-              <p>Subscribed By: </p>
-              <button onclick="selectBookConfirm('<%= category.book.book_id %>')" class="btn btn-primary btn-block"><i class="fa fa-thumbs-up "></i> Select</button>
+              %>
+                <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
+              </a>
+              <div class="media-body">
+                <p class="text-sm pull-right muted">Uploaded on <%= category.book.created_at.to_date.strftime("%d-%b-%Y") %></p>
+                <p class="media-heading">
+                  Book title: <a href="#"><%= category.book.title %></a><br />
+                  Authors: <a href="#"><%= category.book.author %></a></p>
+                <p>Subscribed By: </p>
+                <button onclick="selectBookConfirm('<%= category.book.book_id %>')" class="btn btn-primary"><i class="fa fa-thumbs-up "></i> Select</button>
+                <button onclick="viewBook('<%= category.book.book_id %>', '<%= category.book.title %>', '<%= category.book.author %>')" class="btn btn-success pull-right"><i class="fa fa-eye"></i> Browse Book</button>
+              </div>
             </div>
-          </div>
-        </li>
-      <% end %>
-    </ul>
+          </li>
+        <% end %>
+      </ul>
+    <% else %>
+      <div class="alert alert-danger alert-dismissable">
+        <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
+        No books under this category
+      </div>
+    <% end %>
   </div>
 </div>
 
 <div class="panel panel-default">
   <p class="panel-heading"><b>SECONDARY BOOKS</b></p>
   <div class="panel-body">
-    <ul class="list-group">
-      <% @secondary_books_category.each do |category| %>
-        <li class="list-group-item">
-          <div class="media">
-            <a href="#" class="pull-left">
-              <% cover_location = "#{category.book.book_id}_cover_#{category.book.cover_photo_file_name}"
+    <% unless @secondary_books_category.blank? %>
+      <ul class="list-group">
+        <% @secondary_books_category.each do |category| %>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#" class="pull-left">
+                <% cover_location = "#{category.book.book_id}_cover_#{category.book.cover_photo_file_name}"
 
-            %>
-              <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
-            </a>
-            <div class="media-body">
-              <p class="text-sm pull-right muted">Uploaded on <%= category.book.created_at.to_date.strftime("%d-%b-%Y") %></p>
-              <p class="media-heading">
-                Book title: <a href="#"><%= category.book.title %></a><br />
-                Authors: <a href="#"><%= category.book.author %></a></p>
-              <p>Subscribed By: </p>
-              <button onclick="selectBookConfirm('<%= category.book.book_id %>')" class="btn btn-primary btn-block"><i class="fa fa-thumbs-up "></i> Select</button>
+              %>
+                <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
+              </a>
+              <div class="media-body">
+                <p class="text-sm pull-right muted">Uploaded on <%= category.book.created_at.to_date.strftime("%d-%b-%Y") %></p>
+                <p class="media-heading">
+                  Book title: <a href="#"><%= category.book.title %></a><br />
+                  Authors: <a href="#"><%= category.book.author %></a></p>
+                <p>Subscribed By: </p>
+                <button onclick="selectBookConfirm('<%= category.book.book_id %>')" class="btn btn-primary"><i class="fa fa-thumbs-up "></i> Select</button>
+                <button onclick="viewBook('<%= category.book.book_id %>', '<%= category.book.title %>', '<%= category.book.author %>')" class="btn btn-success pull-right"><i class="fa fa-eye"></i> Browse Book</button>
+              </div>
             </div>
-          </div>
-        </li>
-      <% end %>
-    </ul>
+          </li>
+        <% end %>
+      </ul>
+    <% else %>
+      <div class="alert alert-danger alert-dismissable">
+        <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
+        No books under this category
+      </div>
+    <% end %>
   </div>
 </div>
 
 <div class="panel panel-default">
   <p class="panel-heading"><b>TERTIARY BOOKS</b></p>
   <div class="panel-body">
-    <ul class="list-group">
-      <% @tertiary_books_category.each do |category| %>
-        <li class="list-group-item">
-          <div class="media">
-            <a href="#" class="pull-left">
-              <% cover_location = "#{category.book.book_id}_cover_#{category.book.cover_photo_file_name}"
+    <% unless @tertiary_books_category.blank? %>
+      <ul class="list-group">
+        <% @tertiary_books_category.each do |category| %>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#" class="pull-left">
+                <% cover_location = "#{category.book.book_id}_cover_#{category.book.cover_photo_file_name}"
 
-            %>
-              <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
-            </a>
-            <div class="media-body">
-              <p class="text-sm pull-right muted">Uploaded on <%= category.book.created_at.to_date.strftime("%d-%b-%Y") %></p>
-              <p class="media-heading">
+              %>
+                <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
+              </a>
+              <div class="media-body">
+                <p class="text-sm pull-right muted">Uploaded on <%= category.book.created_at.to_date.strftime("%d-%b-%Y") %></p>
+                <p class="media-heading">
 
-                <% faculties = [] %>
-                <% category.book.faculties.each do |faculty|  %>
-                  <% faculties << "<a href='/select_books_by_faculty/#{faculty.faculty_id}'>#{faculty.name}</a>" %>
-                <% end %>
+                  <% faculties = [] %>
+                  <% category.book.faculties.each do |faculty|  %>
+                    <% faculties << "<a href='/select_books_by_faculty/#{faculty.faculty_id}'>#{faculty.name}</a>" %>
+                  <% end %>
 
-                Book title: <a href="#"><%= category.book.title %></a><br />
-                Authors: <a href="#"><%= category.book.author %></a><br />
-                Faculties: <%= faculties.join(", ") %>
-              </p>
-              <p>Subscribed By: </p>
-              <button onclick="selectBookConfirm('<%= category.book.book_id %>')" class="btn btn-primary btn-block"><i class="fa fa-thumbs-up "></i> Select</button>
+                  Book title: <a href="#"><%= category.book.title %></a><br />
+                  Authors: <a href="#"><%= category.book.author %></a><br />
+                  Faculties: <%= faculties.join(", ") %>
+                </p>
+                <p>Subscribed By: </p>
+                <button onclick="selectBookConfirm('<%= category.book.book_id %>')" class="btn btn-primary"><i class="fa fa-thumbs-up "></i> Select</button>
+                <button onclick="viewBook('<%= category.book.book_id %>', '<%= category.book.title %>', '<%= category.book.author %>')" class="btn btn-success pull-right"><i class="fa fa-eye"></i> Browse Book</button>
+              </div>
             </div>
-          </div>
-        </li>
-      <% end %>
-    </ul>
+          </li>
+        <% end %>
+      </ul>
+    <% else %>
+      <div class="alert alert-danger alert-dismissable">
+        <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
+        No books under this category
+      </div>
+    <% end %>
   </div>
 </div>
 
@@ -119,6 +143,50 @@
 </div>
 <!-- /.modal -->
 
+<div class="col-lg-12">
+  <div class="modal fade" id="viewBook" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+          <h4 class="modal-title" id="H4"> <b id="book-title">Book Viewing</b></h4>
+        </div>
+        <div class="modal-body">
+          &nbsp;
+          <iframe  width="100%" height="1000px" src=""></iframe>
+        </div>
+        <!--<div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>-->
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<style type="text/css">
+  #viewBook .modal-dialog {
+    width: 94%;
+    padding-top: 15px;
+  }
+
+  #viewBook .modal-header {
+    cursor: move;
+    padding: 6px;
+  }
+
+  #viewBook .modal-footer {
+    margin-top: -16px;
+    padding: 19px 38px 12px;
+    text-align: right;
+  }
+
+  #viewBook .modal-body{
+    padding: 1px;
+  }
+
+</style>
+
 <script type="text/javascript">
   var bookID;
 
@@ -142,6 +210,13 @@
     form.appendChild(input);
     
     form.submit();
+  }
+
+  function viewBook(bookID, bookTitle, bookAuthor){
+    document.getElementById('book-title').innerHTML = bookTitle + ' By ' + bookAuthor;
+    iframe = document.getElementsByTagName('iframe')[0];
+    iframe.src = '/books/' + bookID + '.pdf'
+    jQuery('#viewBook').modal('show');
   }
 
 </script>
