--- a/app/views/students/select_books_from_store.rhtml
+++ b/app/views/students/select_books_from_store.rhtml
@@ -3,6 +3,10 @@
     max-height: 111px;
     max-width: 100px;
   }
+
+  .panel-body .btn:not(.btn-block) {
+    width: 147px;
+  }
 </style>
 <div class="alert alert-success">
   Welcome to Bookstore. Subscribe to books that you like. Books that you have already subscribed to are NOT visible
