Updating User Account

--- a/app/views/students/my_account.rhtml
+++ b/app/views/students/my_account.rhtml
@@ -97,14 +97,14 @@
               <div class="form-group">
                 <label class="control-label col-lg-4" for="password">New Password</label>
                 <div class="col-lg-7">
-                  <input type="password" name="password" class="form-control" placeholder="Password" id="password"/>
+                  <input type="password" name="new_password" class="form-control" placeholder="Password" id="password"/>
                 </div>
               </div>
 
               <div class="form-group">
                 <label class="control-label col-lg-4" for="confirm_password">Confirm Password</label>
                 <div class="col-lg-7">
-                  <input type="password" name="confirm_password" class="form-control" placeholder="Confirm Password" id="confirm_password"/>
+                  <input type="password" name="repeat_password" class="form-control" placeholder="Confirm Password" id="confirm_password"/>
                 </div>
               </div>
             </div>
