--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -178,20 +178,14 @@
                 <div class="dropdown dropdown-lg">
                   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
                   <div class="dropdown-menu dropdown-menu-right" role="menu">
-                    <form class="form-horizontal" role="form">
+                    <form class="form-horizontal" role="form" method="GET" action="/search_results">
                       <div class="form-group">
                         <label for="filter">Filter by</label>
                         <select class="form-control">
-                          <option value="0" selected>All Snippets</option>
-                          <option value="1">Featured</option>
-                          <option value="2">Most popular</option>
-                          <option value="3">Top rated</option>
-                          <option value="4">Most commented</option>
+                          <option value="all" selected>Everything</option>
+                          <option value="author">Book Author</option>
+                          <option value="title">Book Title</option>
                         </select>
-                      </div>
-                      <div class="form-group">
-                        <label for="contain">Author</label>
-                        <input class="form-control" type="text" />
                       </div>
                       <div class="form-group">
                         <label for="contain">Contains the words</label>
