--- a/app/views/students/search_results.rhtml
+++ b/app/views/students/search_results.rhtml
@@ -35,3 +35,32 @@
     </div>
   </div>
 <% end %>
+
+<% unless @books_by_authors.blank? %>
+  <div class="panel panel-default">
+    <p class="panel-heading"><b>Search results based on book author <span class="label label-success"><%= @books_by_authors.count %></span></b></p>
+    <div class="panel-body">
+      <ul class="list-group">
+        <% @books_by_authors.each do |book| %>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#" class="pull-left">
+                <% cover_location = "#{book.book_id}_cover_#{book.cover_photo_file_name}" %>
+                <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
+              </a>
+              <div class="media-body">
+                <p class="text-sm pull-right muted">Uploaded on <%= book.created_at.to_date.strftime("%d-%b-%Y") %></p>
+                <p class="media-heading">
+                  Book title: <a href="#"><%= book.title %></a><br />
+                  Authors: <a href="#"><%= book.author %></a></p>
+                <p>Subscribed By: <span class="label label-success"><%= book.users.count %></span></p>
+                <button onclick="viewBook('<%= book.book_id %>', '<%= book.title %>', '<%= book.author %>')" class="btn btn-default"><i class="fa fa-eye"></i> Browse Book</button>
+                <button onclick="removeBookConfirm('<%= book.book_id %>')" class="btn pull-right btn-default"><i class="fa fa-plus"></i> Add To my Bookshelf</button>
+              </div>
+            </div>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+<% end %>
